fixed issue with redundant white space on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body, html{
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -20,19 +20,19 @@ body, html{
 
 }
 
+#root{
+    height: 100%;
+}
+
 .app-container{
     display: flex;
     justify-content: space-between;
-    height: 100%;
+    height: 100vh;
 }
 
 .chat-container{
     display: flex;
 
-}
-
-#root{
-    height: 100%;
 }
 
 
@@ -46,8 +46,10 @@ body, html{
     }
     .app-container{
         flex-direction: column-reverse;
-        height: 100%;
+        min-height: 100vh;
         width: 100%;
+        height: auto;
+
     }
     .chat-container{
         width: 100%;
