--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -96,10 +96,6 @@
 
 
 @media (max-width: 768px){
-    .chatContainer{
-        height: 75%;
-    }
-
     .contact{
         position: sticky;
         top: 0;
