--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -7,6 +7,8 @@
     padding: 2rem;
     border-radius: 2rem;
     width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
 
 
